# Chess-AI

./: README.md  pyproject.toml
src/chess_ai/: __init__.py  ai.py  board.py  game.py  main.py
tests/: test_ai.py  test_board.py
