[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chess-ai-mobin"
version = "0.1.0"
description = "A simple yet extensible chess engine with CLI and minimax-based AI."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Mobin Yousefi", email = "example@example.com" },
]
keywords = ["chess", "ai", "minimax", "alpha-beta", "game"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
]

[project.urls]
Homepage = "https://github.com/mobinyousefi-cs"
Source = "https://github.com/mobinyousefi-cs/chess-ai-mobin"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
ignore = []